--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
